fix social icons too big

--- a/app/assets/stylesheets/_globalnav/_core/_nav.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_nav.sass
@@ -423,6 +423,8 @@ a.nav__item--breadcrumbs
   margin: 16px 0 17px
   width: 32px
   height: 32px
+  background-size: 28px
+  background-position: 2px 2px
   &:hover
     background-color: white
   .ie7 &
